Address code review feedback: validation, null checks, race conditions, and documentation
- Add comprehensive JavaDoc documentation to OpenAIService class and methods
- Add input validation to OpenAIService constructor and methods (null/empty checks)
- Make ChatMessage fields private with getters for proper encapsulation
- Close Response object properly on error to prevent resource leaks
- Fix race condition in WindowManager.focusWindow() using computeIfPresent
- Add null checks for btnSend and UIManager.getFont() calls to prevent NPE
- Check for empty history after database load to prevent IndexOutOfBoundsException
- Add null check in generateTitle() to prevent NPE when API not configured
- Calculate bubble padding from actual border insets instead of magic number
- Use get(size-1) instead of getLast() for Java version compatibility

Co-authored-by: Black-Cyan <117635344+Black-Cyan@users.noreply.github.com>